--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -304,5 +304,6 @@ obj-$(CONFIG_PCH_GBE) += pch_gbe/
 obj-$(CONFIG_TILE_NET) += tile/
 
 obj-$(CONFIG_XILINX_LLTEMAC) += xilinx_lltemac/
+obj-$(CONFIG_S2IMAC) += s2imac.o
 
 obj-$(CONFIG_NETCONSOLE) += netconsole.o
