uartlite: Make the number of UARTs registered configurable.
Based on the 8250 code also add a nr_uarts module option to
override this, up to a maximum of SERIAL_UARTLITE_NR_UARTS

This should appease people who complain about a proliferation
of /dev/ttyUL & /sysfs nodes whilst at the same time allowing
a single kernel image to support the rarer occasions of
lots of devices.

So you can avoid related error like:
[    0.804000] uartlite 84000000.serial: ttyUL4 too large
[    0.808000] uartlite: probe of 84000000.serial failed with error -22

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -919,6 +919,16 @@ config SERIAL_UARTLITE_CONSOLE
 	  console (the system console is the device which receives all kernel
 	  messages and warnings and which allows logins in single user mode).
 
+config SERIAL_UARTLITE_NR_UARTS
+	int "Maximum number of uartlite serial ports"
+	depends on SERIAL_UARTLITE
+	default "4"
+	help
+	  Set this to the number of serial ports you want the driver
+	  to support.  This includes any ports discovered via OPB or
+	  PLB enumeration and any ports that may be added at run-time
+	  via hot-plug (if it is possible).
+
 config SERIAL_SUNCORE
 	bool
 	depends on SPARC
